# avoxelgame

./: README.md  compile_shaders.sh  const_loader.apln  lse.apln  main.apls  main.dyalog  sdl3.apln
avg/: AABB_Intersects.aplf  Assert.aplf  Create_depth_texture.aplf  Create_shaders.aplf  Get_depth_format.aplf  Get_device_backend.aplf  Get_entry_point.aplf  Get_lse_path.aplf  Get_shader_format.aplf  Get_shader_path.aplf  Play.aplf  Ray_hit.aplf  Run.aplf  Silly_hit.aplf  block_data.apln  const_loader.apln  easy_na.apln  lse.apln  math.apln  menu_state.apln  player.apln  sdl3.apln  sdl3_image.apln  sdl3_ttf.apln  state.apln  text.apln  world.apln  world_state.apln  world_ui.apln
lagl/: Run.aplf  chunk.apln  const_loader.apln  easy_na.apln  lse.apln  math.apln  mk_chunk.aplf  sdl3.apln  world.apln
libs/: easy_na.apln  sdl3.apln
lse/: CMakeLists.txt
lse/src/: dwa.c  events.c  gpu.c  pipeline.c  utils.c
saves/: readme.txt
saves/HelloWorld/: map_data.dcf  state.dcf
sdl3_consts/: blend_factor.enum  blend_op.enum  element_size.enum  event_type.enum  gpu_textureformat.enum  init.def  key_code.def  pixel_format.enum  sdl_gpu.def  texture_format.enum  vertex_format.enum
shaders/: fragment.msl  vertex.msl
shaders/dxil/: basic_frag.dxil  basic_vert.dxil  micro_ui_frag.dxil  micro_ui_vert.dxil  text_frag.dxil  text_vert.dxil  ui_frag.dxil  ui_mixz_frag.dxil  ui_vert.dxil
shaders/glsl/: basic.frag  basic.vert  micro_ui.frag  micro_ui.vert  text.frag  text_sdf.frag  text_sdf.vert  ui.frag  ui.vert  ui_mixz.frag
shaders/hlsl/: basic_frag.hlsl  basic_vert.hlsl  text_frag.hlsl  text_sdf_vert.hlsl  ui_frag.hlsl  ui_vert.hlsl
shaders/msl/: basic_frag.msl  basic_vert.msl  micro_ui_frag.msl  micro_ui_vert.msl  text_frag.msl  text_sdf_frag.msl  text_vert.msl  ui_frag.msl  ui_mixz_frag.msl  ui_vert.msl
shaders/spv/: basic_frag.spv  basic_vert.spv  micro_ui_frag.spv  micro_ui_vert.spv  text_frag.spv  text_vert.spv  ui_frag.spv  ui_mixz_frag.spv  ui_vert.spv
